--- a/src/lib/assets/projects.json
+++ b/src/lib/assets/projects.json
@@ -3,6 +3,6 @@
         "projectName": "Letter Box",
         "imagePath" : "/project-logos/letter-boxed-card-icon.svg",
         "description": "A little bot to fight 2014's hottest NYT crossword puzzle app mini-game, <a href='https://www.nytimes.com/puzzles/letter-boxed'>Letter Boxed</a>. If you're curious how intensely I can fixate on such a stupid game, read on.",
-        "projectURL": "https://google.com"
+        "projectURL": "https://github.com/ClydeHuibregtse/letter-box"
     }
 ]
